--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -875,9 +875,7 @@ table th, table td {
   padding: 7px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.13);
   text-align: left;
-}
-table th:first-child, table td:first-child {
-  padding-left: 0;
+  vertical-align: top;
 }
 table th:last-child, table td:last-child {
   padding-right: 0;
