--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2252,6 +2252,23 @@ ins{
     background: lightgreen;
     display: inline-block;
 }
+.article-history-list {
+    list-style-type: none;
+    margin: 0;
+}
+.article-history-list li {
+    padding: .5em;
+    border: 1px solid #ccc;
+}
+.article-history-list .date {
+    border-left: 1px solid #ccc;
+    padding-left: .5em;
+    margin-left: .5em;
+}
+.article-history-list a {
+    padding-left: .5em;
+    float: left;
+}
 
 
 /**
