--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class=info>
-    SOME SLICK INFOBOX HERE: This is an old version of the article. Changes made in this revision were made by [user].
+    SOME SLICK INFOBOX HERE: This is an old version of the article. Changes made in this revision were made by {{ ac.edited_by }}.
 </div>
 
 <div id=article class=serif>
