--- a/wikipendium/wiki/templates/history.html
+++ b/wikipendium/wiki/templates/history.html
@@ -3,9 +3,10 @@
 {% block content %}
 <ul class=article-history-list>
     {% for ac in articleContents %}
-    <li>
+    <li class="clearfix">
         <a href="{{ac.pk}}/">{{ ac.get_full_title }}</a>
         <span class="date">{{ ac.updated }}</span>
+        <span class="user">{{ ac.edited_by }} </span>
     </li>
     {% endfor %}
 </ul>
