Fixed back button

--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if articleContent.get_url %}
-    <a href={{ articleContent.get_url }}>« Back</a>
+<a href={% if articleContent.pk %}{{ articleContent.get_url }}{%else%}/{%endif%} >« Back</a>
 {% endif %}
 <form method="post" action="">
     {% csrf_token %}
