Fixed themes a bit for epiceditor preview mode

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -27,7 +27,7 @@
                     basePath: '{{STATIC_URL}}epiceditor',
                     theme: {
                         base: '/themes/base/epiceditor.css',
-                        preview: '/themes/preview/github.css',
+                        preview: '',//'/themes/preview/github.css',
                         editor: '/themes/editor/epic-light.css'
                     }
                 }).load();
