--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -26,4 +26,15 @@
     {{ content }}
 {% endautoescape %}
 </div>
+
+<div class=contributors>
+    <h2>Written by</h2>
+    {% for user in contributors %}
+        <div>
+            <a href=/users/{{user.username}}>
+                {{ user.get_full_name }}
+            </a>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
