--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -4,6 +4,11 @@
 
 {% block nav %}
 <div class=button-group style=inline-block>
+    {% for lang_code, lang_url in availableLanguages.items %}
+        <a class=button href={{ lang_url }}>{{ lang_code }}</a>
+    {% endfor %}
+</div>
+<div class=button-group style=inline-block>
     <a class="button edit-link" href={{ articleContent.get_edit_url }}>Edit</a>
     <div class="has-dropdown button-dropdown">
         <a class="button share-link" href=# data-toggle=dropdown>Share<span class=caret></span></a>
