--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -8,11 +8,15 @@
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
     <script src={{STATIC_URL}}epiceditor/js/epiceditor.js></script>
+    <link href="{{STATIC_URL}}google-code-prettify/prettify.css"  rel="stylesheet" />
+    <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
         var editor_has_been_updated = false;
         $(function(){
+
+            prettyPrint();
 
             $('.header-logo-link, .button').on('touchstart',function(e){
                 e.preventDefault();
