--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2136,6 +2136,14 @@ body.frontpage:before {
 
 h1{margin:60px 0;}
 h2{margin-top:40px;}
+h3{margin:40px 0 30px 0;}
+h4{margin:40px 0 30px 0;}
+h5{margin:40px 0 30px 0;}
+h6{margin:40px 0 30px 0;}
+
+h1,h2,h3,h4,h5,h6{
+    font-weight:bold;
+}
 
 #article .title{
     margin-bottom:20px;
