--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -76,10 +76,10 @@
     <div id="footer-pusher">
         <div class=container>
             <header id="header" class=row>
-                <h1 class="span6 serif"><a class=header-logo-link href=/>
+                <h1 class="float-left serif"><a class=header-logo-link href=/>
                     {% block logo %}Wikipendium{% endblock %}
                 </a></h1>
-                <nav class=span6>
+                <nav class="float-right">
                 {% block nav %}
                 {% endblock %}
                 {% if user.is_authenticated %}
