--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2185,6 +2185,7 @@ code {
     border:1px solid #eaeaea;
     box-shadow: -1px -1px 0px rgba(0,0,0,0.2);
     margin-bottom:20px;
+    overflow:auto;
 }
 
 
