--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2321,6 +2321,14 @@ ins{
     float: left;
 }
 
+.info{
+    background: rgba(255,165,0,0.5);
+    border: 1px solid rgb(255,165,0);
+    padding: 20px;
+    border-radius:10px;
+    margin: 0 0 30px 0;
+}
+
 /********************
  * USER
 ********************/
