--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class=info>
-    SOME SLICK INFOBOX HERE: This is an old version of the article. Changes made in this revision were made by {{ ac.edited_by }}.
+    This is an old version of the article, written {{ac.updated}} Changes made in this revision were made by <a href="{{ac.edited_by.get_url}}">{{ ac.edited_by }}</a>.
 </div>
 
 <div style=overflow:hidden>
