Made webapp-compatible (Fixes #7)

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -11,7 +11,15 @@
     <link href="{{STATIC_URL}}google-code-prettify/prettify.css"  rel="stylesheet" />
     <script src="{{STATIC_URL}}google-code-prettify/prettify.js"></script>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!--
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="/images/icon-57x57.png" />
+    <link rel="apple-touch-icon" href="/images/icon-72x72.png" sizes="72x72" />
+    <link rel="apple-touch-icon" href="/images/icon-114x114.png" sizes="114x114" />
     <script>
         var editor_has_been_updated = false;
         $(function(){
