--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2336,6 +2336,15 @@ ins{
 .profile-photo {
     float: left;
     margin: 0 .5em .5em 0;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 4px solid white;
+    -webkit-box-shadow: 1px 1px 5px;
+    -moz-box-shadow: 1px 1px 5px;
+    -ms-box-shadow: 1px 1px 5px;
+    -o-box-shadow: 1px 1px 5px;
+    box-shadow: 1px 1px 5px;
 }
 
 /**
