--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -14,9 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="apple-touch-icon" href="/images/icon-57x57.png" />
-    <link rel="apple-touch-icon" href="/images/icon-72x72.png" sizes="72x72" />
-    <link rel="apple-touch-icon" href="/images/icon-114x114.png" sizes="114x114" />
+    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-57x57.png" />
+    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-72x72.png" sizes="72x72" />
+    <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch/icon-114x114.png" sizes="114x114" />
     <script>
         
         $(function(){
