--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" href="/images/icon-57x57.png" />
     <link rel="apple-touch-icon" href="/images/icon-72x72.png" sizes="72x72" />
     <link rel="apple-touch-icon" href="/images/icon-114x114.png" sizes="114x114" />
+    <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.png" />
     <script>
         
         $(function(){
