--- a/wikipendium/wiki/templates/history.html
+++ b/wikipendium/wiki/templates/history.html
@@ -6,7 +6,7 @@
     <li class="clearfix">
         <a href="{{ac.pk}}/">{{ ac.get_full_title }}</a>
         <span class="date">{{ ac.updated }}</span>
-        <a class="user" href=/users/{{ user.username }}/>{{ ac.edited_by }} </a>
+        <a class="user" href=/users/{{ ac.edited_by }}/>{{ ac.edited_by }} </a>
     </li>
     {% endfor %}
 </ul>
