--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ articleContent.get_full_title }} -{% endblock %}
 
+{% block body_class %}article{% endblock %}
+
 {% block nav %}
 <a class=button href=/new/>Create article</a>
 <div class=button-group style=inline-block>
