added new design for all view

--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -6,6 +6,7 @@
 
 {% block nav %}
 <a class=button href=/new/>Create article</a>
+<a class=button href=/all/>All compendiums</a>
 {% endblock %}
 
 {% block content %}
