--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2377,17 +2377,55 @@ ins{
 ********************/
 
 .profile-photo {
+    position:relative;
     float: left;
     margin: 0 .5em .5em 0;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
     border: 4px solid white;
-    -webkit-box-shadow: 1px 1px 5px;
-    -moz-box-shadow: 1px 1px 5px;
-    -ms-box-shadow: 1px 1px 5px;
-    -o-box-shadow: 1px 1px 5px;
-    box-shadow: 1px 1px 5px;
+    -webkit-box-shadow: 1px 1px 5px #444;
+    -moz-box-shadow: 1px 1px 5px #444;
+    -ms-box-shadow: 1px 1px 5px #444;
+    -o-box-shadow: 1px 1px 5px #444;
+    box-shadow: 1px 1px 5px #444;
+    overflow:hidden;
+}
+
+.profile-photo > span {
+    position:absolute;
+    top:0px;
+    left:0px;
+    bottom:0px;
+    right:0px;
+    font-size:12px;
+    padding:50px 20px;
+    text-align:center;
+    display:none;
+    color:#444;
+    line-height:1.2;
+}
+
+a.profile-photo img {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
+a.profile-photo {
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+}
+
+.gravatar-link {
+    color:#069;
+}
+
+.profile-photo:hover > span {
+    display:block;
+}
+
+a.profile-photo:hover img {
+    opacity:0.5;
 }
 
 /**
