--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -106,7 +106,7 @@ MathJax.Hub.Config({
         </ul>
     </div>
                     {% else %}
-                        <a class=button href=/accounts/login/><i class="icon icon-prepend"></i>Not logged in</a>
+                    <a class=button href=/accounts/login/?next={{request.path}}><i class="icon icon-prepend"></i>Not logged in</a>
                     {% endif %}
                     </nav>
                 </header>
