added ccbysa link

--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -124,7 +124,7 @@ MathJax.Hub.Config({
     </div>
     <footer id="page-footer">
             <div class="container" style=font-variant:small-caps>
-                <a href=/>Wikipendium</a> cc-by-sa
+                <a href=/>Wikipendium</a> <a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">cc-by-sa</a>
         </div>
     </footer>
 
