--- a/wikipendium/wiki/templates/user.html
+++ b/wikipendium/wiki/templates/user.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div id=article class=serif>
     <div class=clearfix>
-        {% if user.email %}
+        {% if user == request.user %}
         <a href="http://gravatar.com/emails" target="_blank" class="profile-photo sans-serif" style=float:left;display:inline-block;>
             <img src="{{ gravatar }}" width=150 height=150 />
             <span>Edit your<br>profile picture<br>at <span class="gravatar-link">gravatar.com</span></span>
