add some more help, updates #73

--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -48,7 +48,8 @@
         <li><a href=http://en.wikibooks.org/wiki/LaTeX/Mathematics>Guide to mathematical notation in LaTeX</a></li>
         <li><a href=http://code.google.com/p/support/wiki/WikiSyntax#Tables>Guide to using tables</a></li>
     </ul>
-    <p>Mathematical notation may be written as follows:</p>
-    <pre>&#36;&#36; y = 2*x &#36;&#36;</pre>
+<h3>Mathematical notation may be written as follows:</h3>
+    <p>Inline math uses single dollar signs, like this <span class="tex2jax_ignore">$ y = x $</span>,  while blocks of math are indicated with double dollar signs:</p>
+    <pre>$$ y = 2*x $$</pre>
 </div>
 {% endblock %}
