--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2459,3 +2459,7 @@ input[readonly=True]{
     vertical-align: text-top;
     margin: 0 3em;
 }
+
+.tex2jax_ignore {
+    font-family: "Consolas", "Courier", monospace;
+}
