--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -24,8 +24,17 @@
 {% endif %}
 </div>
 
-<div id=article class=serif>
+<div id=article class=article-source>
     <h1 class=title>{{ ac.get_full_title }}</h1>
     <div class=content>{{ ac.diff|safe }}</div>
 </div>
+
+<script>
+    $(function(){
+        $('.diff.equal').click(function(){
+            $(this).toggleClass('hidden'); 
+        });
+    });
+</script>
+
 {% endblock %}
