--- a/wikipendium/wiki/templates/history_single.html
+++ b/wikipendium/wiki/templates/history_single.html
@@ -17,10 +17,10 @@
 
 <div style=overflow:hidden>
 {% if prev_ac %}
-<a class="button" href={{prev_ac.get_history_single_url}}>Previous version</a>
+<a class="button" id="prev-button" href={{prev_ac.get_history_single_url}}>Previous version</a>
 {% endif %}
 {% if next_ac %}
-<a class="button float-right" href={{next_ac.get_history_single_url}}>Next version</a>
+<a class="button float-right" id="next-button" href={{next_ac.get_history_single_url}}>Next version</a>
 {% endif %}
 </div>
 
