--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -55,18 +55,20 @@ MathJax.Hub.Config({
                 );
             });
 
-            var textarea = document.getElementById("id_content");
-            var codeMirror = CodeMirror.fromTextArea(textarea, {
-                mode: "markdown-latex",
-                theme: "xq-light"
-            }).on("change", function(){
-                editor_has_been_updated = true;
-            });
+            var textarea;
+            if (textarea = document.getElementById("id_content")) {
+                var codeMirror = CodeMirror.fromTextArea(textarea, {
+                    mode: "markdown-latex",
+                    theme: "xq-light"
+                }).on("change", function(){
+                    editor_has_been_updated = true;
+                });
 
-            $('form').submit(function(){
-                // Allow form to submit without being bugged about unsaved changes
-                editor_has_been_updated = false;
-            });
+                $('form').submit(function(){
+                    // Allow form to submit without being bugged about unsaved changes
+                    editor_has_been_updated = false;
+                });
+            }
             function create_article() {
                 var redirect_url = $('#create-article-slug').val() + "/edit/";
                 window.location.href = redirect_url;
