Ability to add new languages of compendium

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -7,9 +7,21 @@
 {% block nav %}
 <a class=button href=/new/>Create article</a>
 <div class=button-group style=inline-block>
-    {% for lang_code, lang_url in availableLanguages.items %}
-        <a class=button href={{ lang_url }}>{{ lang_code }}</a>
-    {% endfor %}
+    {% if availableLanguages.items %}
+        <div class="has-dropdown button-dropdown text-left">
+            <a class="button" href=# data-toggle=dropdown>Languages<span class=caret></span></a>
+            <ul class="dropdown left">
+                {% for lang_code, lang_url in availableLanguages.items %}
+                    <li>
+                        <a href={{ lang_url }}>{{ lang_code }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% else %}
+        <a class=button>Languages</a>
+    {% endif %}
+    <a class="button add-language-button" href={{ articleContent.get_add_language_url }}>+</a>
 </div>
 <div class=button-group style=inline-block>
     <a class="button edit-link" href={{ articleContent.get_edit_url }}>Edit</a>
